--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-flash-pure",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Angular flash notifications styled using purecss/pure extras",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/spectra-music/angular-flash-pure",
   "devDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": "~0.4.5",
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-coffee": "~0.10.1"
   }
 }
